202002140
Based on Buster 2020-02-05
H264 encoding for BATC Streamer corrected
Added C920 as working video source

202001310
Update to LimeSuite 20.01
Initial Buster Release
LimeDVB with some modes released
Repeater TX mode implemented
New Touchscreen Menu for Lime Config
Lime Config Menu added to Console
Calibration switching implemented
Cured retransmit on configuration touch after transmit deselection
Corrected display of DVB-S2 FECs on Info Screen

201912100
Add Autoset of LNB Offset for LongMynd
Grey-out unavailable video source buttons
Cure file handle leak
Prep for Migration to Buster

201910230
Display Additional Receive Parameters
Improve receive display appearance and behaviour

201910100
Allow dist-upgrade and correct auto-start bug
Add button to generate comp video with 7 inch screen
(Add separate attenuator and lime/express level buttons) Non réalisé car bouton UpSample
Set attenuator properly from Console Menu
Allow independent input selection for satellite and terrestrial RX
Error check Sat LNB offset
12-hourly reboot for keyed TX mode

201909210
Initial release of LongMynd Receiver Integration

201907272
Audio out enabled on LimeNET Micro
Allow 33KS TX selection
Handle DVB-S2 FECs better
Allow 16:9 Comp Vid H264 with C920 connected
Don't call dist-upgrade in install and update (to avoid 3.5 touchscreen issue)

201907070
Basic support for LimeNET-Micro
Preparation for receive using MiniTiouner and LongMynd code
Fix for Waveshare Touchscreen problem

201906060
Overide RPi GPIOs when Express GPIOs 16-31 selected
Improve IPTS IN performance with LimeSDR
Jetson H264 and Pi Cam Support
Jetson C920 Webcam support at 500KS only and below only
Jetson Config Menu
Delayed PTT switching on Jetson GPIO Pin 40
Added 16:9 Comp Vid H264 mode

201905090
Add DVB-S2 pilots on/off
Improve DVB-S2 selection labelling
Add binaries for limesdr_dvb
Add initial code for Jetson control
Add user-configurable buttons
Enable update from other GitHub users' repos