@@ -37,7 +37,7 @@ while [ "$GUI_RETURN_CODE" -gt 127 ];  do
     ;;
     130)
       /home/pi/rpidatv/bin/siggen
-      GUI_RETURN_CODE="129"
+      GUI_RETURN_CODE=129
     ;;
     131)
       cd /home/pi/FreqShow
@@ -54,30 +54,56 @@ while [ "$GUI_RETURN_CODE" -gt 127 ];  do
       /home/pi/update.sh -d
     ;;
     134)
-      /home/pi/rpidatv/bin/xy
       GUI_RETURN_CODE="129"
     ;;
     160)
       sleep 1
       sudo swapoff -a
       sudo shutdown now
+      break
     ;;
     192)
       sleep 1
       sudo swapoff -a
       sudo reboot now
+      break
     ;;
     193)
-      source /home/pi/rpidatv/scripts/rotate7inch.sh
+      # Rotate 7 inch display
+      # Three scenarios:
+      #  (1) No text in /boot/config.txt, so append it
+      #  (2) Rotate text is in /boot/config.txt, so comment it out
+      #  (3) Commented text in /boot/config.txt, so uncomment it
+
+      # Test for Scenario 1
+      if ! grep -q 'lcd_rotate=2' /boot/config.txt; then
+        # No relevant text, so append it (Scenario 1)
+        sudo sh -c 'echo "\n## Rotate 7 inch Display\nlcd_rotate=2\n" >> /boot/config.txt'
+      else
+        # Text exists, so see if it is commented or not
+        TEST_STRING="#lcd_rotate=2"
+        if ! grep -q -F $TEST_STRING /boot/config.txt; then
+          # Scenario 2
+          sudo sed -i '/lcd_rotate=2/c\#lcd_rotate=2' /boot/config.txt >/dev/null 2>/dev/null
+        else
+          # Scenario 3
+          sudo sed -i '/#lcd_rotate=2/c\lcd_rotate=2' /boot/config.txt  >/dev/null 2>/dev/null
+        fi
+      fi
+
+      # Make sure that scheduler reboots and does not repeat 7 inch rotation
+      GUI_RETURN_CODE=192
       sleep 1
       sudo swapoff -a
       sudo reboot now
+      break
     ;;
     194)
       source /home/pi/rpidatv/scripts/toggle_pwm.sh
       sleep 1
       sudo swapoff -a
       sudo reboot now
+      break
     ;;
     *)
       # Jump out of the loop
@@ -85,5 +111,3 @@ while [ "$GUI_RETURN_CODE" -gt 127 ];  do
     ;;
   esac
 done
-
-
